added bsp for nucleo144 with stm32l4r5 built ok but image file size is zero... may be something is wrong in linker script

--- a/targets/stm32l4_my_sensor/target.yml
+++ b/targets/stm32l4_my_sensor/target.yml
@@ -4,7 +4,7 @@
 target.app:           apps/my_sensor_app
 
 # Board Support Package (BSP) for the target
-target.bsp:           "hw/bsp/stm32l4"
+target.bsp:           "hw/bsp/nucleo144-l4r5"
 
 # Build with debug info
 target.build_profile: debug
