--- a/apps/my_sensor_app/pkg.yml
+++ b/apps/my_sensor_app/pkg.yml
@@ -33,9 +33,9 @@ pkg.deps:
     - "@apache-mynewt-core/hw/sensor/creator"  #  Sensor Creator
     - "@apache-mynewt-core/libc/baselibc"      #  Baselibc, the tiny version of standard C library
     #  Inject the Rust build into the Mynewt build
-    - "libs/mynewt_rust"   #  Rust interop layer for Mynewt
-    - "libs/rust_app"      #  Rust Application Stub. Will be replaced by Rust application and external Rust libraries.
-    - "libs/rust_libcore"  #  Rust Core Library Stub. Will be replaced by Rust Core Library libcore.
+    #- "libs/mynewt_rust"   #  Rust interop layer for Mynewt
+    #- "libs/rust_app"      #  Rust Application Stub. Will be replaced by Rust application and external Rust libraries.
+    #- "libs/rust_libcore"  #  Rust Core Library Stub. Will be replaced by Rust Core Library libcore.
 
 # Optional Dependencies: Application is dependent on these optional drivers and libraries.
 #   "pkg.deps.xxx" refers to packages that should be included only if option "xxx" is
