--- a/hw/bsp/nucleo144-l4r5zi/bsp.yml
+++ b/hw/bsp/nucleo144-l4r5zi/bsp.yml
@@ -22,51 +22,45 @@
 bsp.arch: cortex_m4
 bsp.compiler: "@apache-mynewt-core/compiler/arm-none-eabi-m4"
 bsp.linkerscript:
-    - 'hw/bsp/nucleo144-l4r5/nucleo144-l4r5.ld'
+    - 'hw/bsp/nucleo144-l4r5zi/nucleo144-l4r5zi.ld'
     - "@apache-mynewt-core/hw/mcu/stm/stm32l4xx/stm32l476.ld"
 bsp.linkerscript.BOOT_LOADER.OVERWRITE:
-    - 'hw/bsp/nucleo144-l4r5/boot-nucleo144-l4r5.ld'
+    - 'hw/bsp/nucleo144-l4r5zi/boot-nucleo144-l4r5zi.ld'
     - "@apache-mynewt-core/hw/mcu/stm/stm32l4xx/stm32l476.ld"
-bsp.part2linkerscript: "hw/bsp/nucleo144-l4r5/split-nucleo144-l4r5.ld"
-bsp.downloadscript: "hw/bsp/nucleo144-l4r5/nucleo144-l4r5_download.sh"
-bsp.debugscript: "hw/bsp/nucleo144-l4r5/nucleo144-l4r5_debug.sh"
-bsp.downloadscript.WINDOWS.OVERWRITE: "hw/bsp/nucleo144-l4r5/nucleo144-l4r5_download.cmd"
-bsp.debugscript.WINDOWS.OVERWRITE: "hw/bsp/nucleo144-l4r5/nucleo144-l4r5_debug.cmd"
+#bsp.part2linkerscript: "hw/bsp/nucleo144-l4r5zi/split-nucleo144-l4r5zi.ld"
+bsp.downloadscript: "hw/bsp/nucleo144-l4r5zi/nucleo144-l4r5zi_download.sh"
+bsp.debugscript: "hw/bsp/nucleo144-l4r5zi/nucleo144-l4r5zi_debug.sh"
+bsp.downloadscript.WINDOWS.OVERWRITE: "hw/bsp/nucleo144-l4r5zi/nucleo144-l4r5zi_download.cmd"
+bsp.debugscript.WINDOWS.OVERWRITE: "hw/bsp/nucleo144-l4r5zi/nucleo144-l4r5zi_debug.cmd"
 
-# STM32L431 has 256 KB of ROM
-# TODO : do it for STM32l4r5 !!!
 bsp.flash_map:
     areas:
         # System areas.
         FLASH_AREA_BOOTLOADER:
-            # Must sync with boot-stm32l4.ld, scripts/stm32l4/flash-boot.ocd
             device: 0
-            offset: 0x08000000
-            size:   16kB
+            offset: 0x00000000
+            size: 16kB
         FLASH_AREA_IMAGE_0:
-            # Must sync with stm32l4.ld, scripts/stm32l4/flash-app.ocd
             device: 0
-            offset: 0x08004000
-            size:   64kB
+            offset: 0x00008000
+            size: 232kB
         FLASH_AREA_IMAGE_1:
             device: 0
-            offset: 0x08014000
-            size:   64kB
+            offset: 0x00042000
+            size: 232kB
         FLASH_AREA_IMAGE_SCRATCH:
             device: 0
-            offset: 0x08024000
-            size:   32kB
+            offset: 0x0007c000
+            size: 4kB
 
         # User areas.
         FLASH_AREA_REBOOT_LOG:
             user_id: 0
             device: 0
-            offset: 0x0802c000
-            size:   32kB
+            offset: 0x00004000
+            size: 16kB
         FLASH_AREA_NFFS:
             user_id: 1
             device: 0
-            offset: 0x08034000
-            size:   16kB
-
-# Ends at 0x08038000 (224 KB)
+            offset: 0x0007d000
+            size: 12kB
