--- a/hw/bsp/nucleo144-l4r5zi/pkg.yml
+++ b/hw/bsp/nucleo144-l4r5zi/pkg.yml
@@ -17,29 +17,31 @@
 # under the License.
 #
 
-syscfg.defs:
-    STM32_FLASH_SIZE_KB:
-        description: 'Total flash size in KB.'
-        value: 128
+### Entries containing `***` need to be replaced with actual values.
 
-    UART_0:
-        description: 'UART 0'
-        value:  1
+pkg.name: "hw/bsp/nucleo144-l4r5zi"
+pkg.type: bsp
+pkg.description: "Description of your package"
+pkg.author: "You <you@you.org>"
+pkg.homepage: "http://your-url.org/"
+pkg.keywords:
+    - stm32
+    - stm32l4
+    - nucleo
 
-    TIMER_0:
-        description: 'Timer 0'
-        value:  1
+pkg.cflags:
+    - -DSTM32L4xx
+    - -DSTM32L4R5xx
 
-    TIMER_1:
-        description: 'Timer 1'
-        value:  0
+pkg.cflags.HARDFLOAT:
+    - -mfloat-abi=hard -mfpu=fpv4-sp-d16
 
-    TIMER_2:
-        description: 'Timer 2'
-        value:  0
+pkg.deps:
+    #- '@apache-mynewt-core/kernel/os'
+    - "@apache-mynewt-core/hw/mcu/stm/stm32l4xx"
+    - '@apache-mynewt-core/libc/baselibc'
 
-syscfg.vals:
-    REBOOT_LOG_FLASH_AREA: FLASH_AREA_REBOOT_LOG
-    CONFIG_FCB_FLASH_AREA: FLASH_AREA_NFFS
-    NFFS_FLASH_AREA: FLASH_AREA_NFFS
-    COREDUMP_FLASH_AREA: FLASH_AREA_IMAGE_1
+pkg.deps.UART_0:
+    - "@apache-mynewt-core/hw/drivers/uart/uart_hal"
+pkg.deps.UART_1:
+    - "@apache-mynewt-core/hw/drivers/uart/uart_hal"
