--- a/mfgs/pickup/mfg.yml
+++ b/mfgs/pickup/mfg.yml
@@ -1,13 +1,13 @@
-mfg.bsp: "hw/bsp/nucleo144-l4r5"
+mfg.bsp: "hw/bsp/nucleo144-l4r5zi"
 mfg.targets:
     - stm32l4_boot:
       name: "targets/stm32l4_boot"
-      manifest_path: "bin/targets/stm32l4_boot/app/@apache-mynewt-core/apps/boot"
+      #manifest_path: "bin/targets/stm32l4_boot/app/@apache-mynewt-core/apps/boot"
       area: FLASH_AREA_BOOTLOADER
       offset: 0x0
     - stm32l4_my_sensor:
       name: "targets/stm32l4_my_sensor"
-      manifest_path: "bin/targets/stm32l4_my_sensor/app/apps/my_sensor_app"
+      #manifest_path: "bin/targets/stm32l4_my_sensor/app/apps/my_sensor_app"
       area: FLASH_AREA_IMAGE_0
       offset: 0x0
 mfg.meta:
