--- a/targets/stm32l4_my_sensor/target.yml
+++ b/targets/stm32l4_my_sensor/target.yml
@@ -4,7 +4,8 @@
 target.app:           apps/my_sensor_app
 
 # Board Support Package (BSP) for the target
-target.bsp:           "hw/bsp/nucleo144-l4r5"
+target.bsp:           "hw/bsp/nucleo144-l4r5zi"
+#target.bsp:           "hw/bsp/stm32l4"
 
 # Build with debug info
 target.build_profile: debug
