--- a/targets/stm32l4_boot/target.yml
+++ b/targets/stm32l4_boot/target.yml
@@ -1,4 +1,5 @@
-target.app: "@apache-mynewt-core/apps/boot"
+#target.app: "@apache-mynewt-core/apps/boot"
+target.app: "apps/boot_stub"
 target.bsp: "hw/bsp/nucleo144-l4r5zi"
 target.build_profile: optimized
 #target.build_profile: debug
