--- a/hw/bsp/nucleo144-l4r5zi/syscfg.yml
+++ b/hw/bsp/nucleo144-l4r5zi/syscfg.yml
@@ -23,12 +23,12 @@ syscfg.defs:
         value: 1024
 
     UART_0:
-        description: 'UART 0'
+        description: 'UART used to communicate with BC95 NbIoT Modem'
         value:  1
 
     UART_1:
         description: 'Whether to enable UART1'
-        value:  1
+        value:  0
 
     TIMER_0:
         description: 'Timer 0'
@@ -49,5 +49,5 @@ syscfg.vals:
     COREDUMP_FLASH_AREA: FLASH_AREA_IMAGE_1
     BOOTUTIL_MAX_IMG_SECTORS: 256
     
-    CONSOLE_UART_DEV: '"uart1"'
-    CONSOLE_UART_BAUD: 115200
+    #CONSOLE_UART_DEV: '"uart1"'
+    #CONSOLE_UART_BAUD: 115200
