--- a/targets/stm32l4_my_sensor/syscfg.yml
+++ b/targets/stm32l4_my_sensor/syscfg.yml
@@ -26,13 +26,13 @@ syscfg.vals:
     # CoAP Server Settings
 
     # CoAP host e.g. 104.199.85.211 (for coap.thethings.io)
-    COAP_HOST:      '"104.199.85.211"'
+    COAP_HOST:      '"161.35.27.253"'
 
     # CoAP UDP port, usually port 5683
     COAP_PORT:      5683
 
     # CoAP URI e.g. v2/things/IVRiBCcR6HPp_CcZIFfOZFxz_izni5xc_KO-kgSA2Y8 (for thethings.io, the last part is the Thing Token)
-    COAP_URI:       '"v2/things/IVRiBCcR6HPp_CcZIFfOZFxz_izni5xc_KO-kgSA2Y8"'
+    COAP_URI:       '"basic"'
 
     ###########################################################################
     # Sensor Settings
@@ -55,7 +55,7 @@ syscfg.vals:
     ###########################################################################
     # Network Settings
 
-    NBIOT_BAND:             8  # Connect to this NB-IoT band
+    NBIOT_BAND:             20  # Connect to this NB-IoT band
     SENSOR_NETWORK:         1  # Enable Sensor Network library
     SENSOR_COAP:            1  # Send sensor data to CoAP server
     COAP_JSON_ENCODING:     1  # Use JSON to encode CoAP payload for forwarding to thethings.io
