--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,12 +4,30 @@
     "version": "2.0.0",
     "tasks": [
         {
-            //  Combined install command to install VSCode Extensions and Mynewt.  Both are run concurrently.
-            "label": "0️⃣ Install Apache Mynewt",
-            "dependsOn": [
-                "Install Extensions", 
-                "Install Mynewt"
-            ],
+            //  Install VSCode Extensions. They will be activated upon restarting VSCode.
+            "label": "0️⃣ Install Extensions",
+            "type": "shell",
+            "windows": {
+                "command": "cmd",
+                "args": [
+                    "/c",
+                    " code --force --install-extension sanaajani.taskrunnercode --install-extension marus25.cortex-debug --install-extension ms-vscode.cpptools --install-extension rust-lang.rust --install-extension bungcip.better-toml && echo Done! Please restart Visual Studio Code to activate the extensions"
+                ]
+            },
+            "osx": {
+                "command": "bash",
+                "args": [
+                    "-c", "-l",
+                    " code --force --install-extension sanaajani.taskrunnercode --install-extension marus25.cortex-debug --install-extension ms-vscode.cpptools --install-extension rust-lang.rust --install-extension bungcip.better-toml "
+                ]
+            },
+            "linux": {
+                "command": "bash",
+                "args": [
+                    "-c", "-l",
+                    " code --force --install-extension sanaajani.taskrunnercode --install-extension marus25.cortex-debug --install-extension ms-vscode.cpptools --install-extension rust-lang.rust --install-extension bungcip.better-toml "
+                ]
+            },
             "problemMatcher": [],
             "presentation": {
                 "clear": true
@@ -17,27 +35,27 @@
         },
         {
             //  Build the Bootloader.
-            "label": "1️⃣ Build bluepill_boot",
+            "label": "1️⃣ Build Bootloader",
             "type": "shell",
             "windows": {
                 "command": "cmd",
                 "args": [
                     "/c",
-                    " newt\\newt.exe build -v bluepill_boot && newt\\newt.exe size -v bluepill_boot && echo ✅ ◾ ️Done! "
+                    " scripts\\nrf52\\build-boot.cmd && echo ✅ ◾ ️Done! "
                 ]
             },
             "osx": {
                 "command": "bash",
                 "args": [
                     "-c", "-l",
-                    " newt build -v bluepill_boot && newt size -v bluepill_boot && echo ✅ ◾ ️Done! "
+                    " scripts/nrf52/build-boot.sh && echo ✅ ◾ ️Done! "
                 ],
             },
             "linux": {
                 "command": "bash",
                 "args": [
                     "-c", "-l",
-                    " newt build -v bluepill_boot && newt size -v bluepill_boot && echo ✅ ◾ ️Done! "
+                    " scripts/nrf52/build-boot.sh && echo ✅ ◾ ️Done! "
                 ],
             },
             "problemMatcher": [ "$gcc" ],
@@ -47,7 +65,7 @@
         },
         {
             //  Build the Application.
-            "label": "2️⃣ Build bluepill_my_sensor",
+            "label": "2️⃣ Build Application",
             "type": "shell",
             "windows": {
                 "command": "cmd",
@@ -95,27 +113,27 @@
         },
         {
             //  Create the Application ROM Image.
-            "label": "3️⃣ Image bluepill_my_sensor",
+            "label": "3️⃣ Image Application",
             "type": "shell",
             "windows": {
                 "command": "cmd",
                 "args": [
                     "/c",
-                    " newt\\newt.exe create-image -v bluepill_my_sensor 1.0.0 && newt\\newt.exe size -v bluepill_my_sensor && echo ✅ ◾ ️Done! "
+                    " scripts\\nrf52\\image-app.cmd && echo ✅ ◾ ️Done! "
                 ]
             },
             "osx": {
                 "command": "bash",
                 "args": [
                     "-c", "-l",
-                    " newt create-image -v bluepill_my_sensor 1.0.0 && newt size -v bluepill_my_sensor && echo ✅ ◾ ️Done! "
+                    " scripts/nrf52/image-app.sh && echo ✅ ◾ ️Done! "
                 ],
             },
             "linux": {
                 "command": "bash",
                 "args": [
                     "-c", "-l",
-                    " newt create-image -v bluepill_my_sensor 1.0.0 && newt size -v bluepill_my_sensor && echo ✅ ◾ ️Done! "
+                    " scripts/nrf52/image-app.sh && echo ✅ ◾ ️Done! "
                 ],
             },
             "problemMatcher": [],
@@ -124,14 +142,14 @@
             }
         },
         {
-            //  Flash the Bootloader to Blue Pill.  We use custom scripts instead of "newt load" because "newt" runs in Ubuntu while the ST Link driver runs under Windows.
-            "label": "4️⃣ Load bluepill_boot",
+            //  Flash the Bootloader.  We use custom scripts instead of "newt load" because "newt" runs in Ubuntu while the ST Link driver runs under Windows.
+            "label": "4️⃣ Load Bootloader",
             "type": "shell",
             "windows": {
                 "command": "cmd",
                 "args": [
                     "/c",
-                    " openocd\\bin\\openocd -f scripts/flash-init.ocd -f interface/stlink-v2.cfg -f target/stm32f1x.cfg -f scripts/flash-boot.ocd "
+                    " scripts\\nrf52\\flash-boot.cmd && echo ✅ ◾ ️Done! "
                 ]
             },
             "osx": {
@@ -139,7 +157,7 @@
                 "command": "bash",
                 "args": [
                     "-c", "-l",
-                    " openocd/bin/openocd -f scripts/flash-init.ocd -f interface/stlink-v2.cfg -f target/stm32f1x.cfg -f scripts/flash-boot.ocd "
+                    " scripts/nrf52/flash-boot.sh && echo ✅ ◾ ️Done! "
                 ],
             },
             "linux": {
@@ -147,7 +165,7 @@
                 "command": "bash",
                 "args": [
                     "-c", "-l",
-                    " openocd/bin/openocd -f scripts/flash-init.ocd -f interface/stlink-v2.cfg -f target/stm32f1x.cfg -f scripts/flash-boot.ocd "
+                    " scripts/nrf52/flash-boot.sh && echo ✅ ◾ ️Done! "
                 ],
             },
             "problemMatcher": [],
@@ -156,14 +174,14 @@
             }
         },
         {
-            //  Flash the Application to Blue Pill.  We use custom scripts instead of "newt load" because "newt" runs in Ubuntu while the ST Link driver runs under Windows.
-            "label": "5️⃣ Load bluepill_my_sensor",
+            //  Flash the Application.  We use custom scripts instead of "newt load" because "newt" runs in Ubuntu while the ST Link driver runs under Windows.
+            "label": "5️⃣ Load Application",
             "type": "shell",
             "windows": {
                 "command": "cmd",
                 "args": [
                     "/c",
-                    " openocd\\bin\\openocd -f scripts/flash-init.ocd -f interface/stlink-v2.cfg -f target/stm32f1x.cfg -f scripts/flash-app.ocd "
+                    " scripts\\nrf52\\flash-app.cmd && echo ✅ ◾ ️Done! "
                 ]
             },
             "osx": {
@@ -171,7 +189,7 @@
                 "command": "bash",
                 "args": [
                     "-c", "-l",
-                    " openocd/bin/openocd -f scripts/flash-init.ocd -f interface/stlink-v2.cfg -f target/stm32f1x.cfg -f scripts/flash-app.ocd "
+                    " scripts/nrf52/flash-app.sh && echo ✅ ◾ ️Done! "
                 ],
             },
             "linux": {
@@ -179,7 +197,37 @@
                 "command": "bash",
                 "args": [
                     "-c", "-l",
-                    " openocd/bin/openocd -f scripts/flash-init.ocd -f interface/stlink-v2.cfg -f target/stm32f1x.cfg -f scripts/flash-app.ocd "
+                    " scripts/nrf52/flash-app.sh && echo ✅ ◾ ️Done! "
+                ],
+            },
+            "problemMatcher": [],
+            "presentation": {
+                "clear": true
+            }
+        },
+        {
+            //  Erase the Flash ROM
+            "label": "⚡️ Erase Flash",
+            "type": "shell",
+            "windows": {
+                "command": "cmd",
+                "args": [
+                    "/c",
+                    " scripts\\nrf52\\flash-erase.cmd && echo ✅ ◾ ️Done! "
+                ]
+            },
+            "osx": {
+                "command": "bash",
+                "args": [
+                    "-c", "-l",
+                    " scripts/nrf52/flash-erase.sh && echo ✅ ◾ ️Done! "
+                ],
+            },
+            "linux": {
+                "command": "bash",
+                "args": [
+                    "-c", "-l",
+                    " scripts/nrf52/flash-erase.sh && echo ✅ ◾ ️Done! "
                 ],
             },
             "problemMatcher": [],
@@ -189,7 +237,7 @@
         },
         {
             //  Generate Rust bindings for C libraries.
-            "label": "⛓ Generate Rust bindings",
+            "label": "⛓ Generate Rust Bindings",
             "type": "shell",
             "command": "bash",
             "args": [
@@ -203,7 +251,7 @@
         },
         {
             //  Build Rust library with macros expanded, output to logs/libmylib-expanded.rs.
-            "label": "👓 Expand Rust macros",
+            "label": "👓 Expand Rust Macros",
             "type": "shell",
             "command": "bash",
             "args": [
@@ -271,36 +319,6 @@
                     "-c", "-l",
                     " newt clean -v all && rm -r target ; echo ✅ ◾ ️Done! "
                 ],
-            },
-            "problemMatcher": [],
-            "presentation": {
-                "clear": true
-            }
-        },
-        {
-            //  Install VSCode Extensions. They will be activated upon restarting VSCode.
-            "label": "Install Extensions",
-            "type": "shell",
-            "windows": {
-                "command": "cmd",
-                "args": [
-                    "/c",
-                    " code --force --install-extension sanaajani.taskrunnercode --install-extension marus25.cortex-debug --install-extension ms-vscode.cpptools --install-extension rust-lang.rust --install-extension bungcip.better-toml && echo Done! Please restart Visual Studio Code to activate the extensions"
-                ]
-            },
-            "osx": {
-                "command": "bash",
-                "args": [
-                    "-c", "-l",
-                    " code --force --install-extension sanaajani.taskrunnercode --install-extension marus25.cortex-debug --install-extension ms-vscode.cpptools --install-extension rust-lang.rust --install-extension bungcip.better-toml "
-                ]
-            },
-            "linux": {
-                "command": "bash",
-                "args": [
-                    "-c", "-l",
-                    " code --force --install-extension sanaajani.taskrunnercode --install-extension marus25.cortex-debug --install-extension ms-vscode.cpptools --install-extension rust-lang.rust --install-extension bungcip.better-toml "
-                ]
             },
             "problemMatcher": [],
             "presentation": {
