--- a/apps/my_sensor_app/syscfg.yml
+++ b/apps/my_sensor_app/syscfg.yml
@@ -38,6 +38,18 @@ syscfg.defs:
     SENSOR_POLL_TIME:
         description: 'Poll the sensor every N milliseconds e.g. 10 * 1000'
         value:       UNDEFINED_SENSOR_POLL_TIME
+    BLUETOOTH_LE:
+        description: 'Enable Bluetooth LE functions'
+        value:        0        
+    BLUETOOTH_MESH:
+        description: 'Enable Bluetooth Mesh functions'
+        value:        0        
+    LOW_POWER:
+        description: 'Enable low power support for STM32 Blue Pill'
+        value:        0        
+    GPS_L70R:
+        description: 'Enable driver for Quectel L70-R GPS module'
+        value:        0        
     BC95G:
         description: 'Enable NB-IoT access with Quectel BC95-G'
         value:        0        
@@ -83,6 +95,12 @@ syscfg.defs:
 #   targets/bluepill_my_sensor/syscfg.yml will override the settings below.
 
 syscfg.vals:
+    # OS_MAIN_STACK_SIZE: 1024  #  Small stack size: 4 KB
+    # OS_MAIN_STACK_SIZE: 2048  #  Normal stack size: 8 KB
+    OS_MAIN_STACK_SIZE: 4096  #  Large stack size: 16 KB
+
+    MSYS_1_BLOCK_COUNT: 64  # Allocate extra MSYS buffers
+
     ###########################################################################
     # CoAP Server Settings
 
@@ -96,22 +114,62 @@ syscfg.vals:
     COAP_URI:       '"v2/things/IVRiBCcR6HPp_CcZIFfOZFxz_izni5xc_KO-kgSA2Y8"'
 
     ###########################################################################
-    # Sensor Settings
+    # Bluetooth LE Settings
 
-    # Sensor device is the STM32 Internal Temperature Sensor
-    SENSOR_DEVICE:     MYNEWT_VAL(TEMP_STM32_DEVICE)
+    BLUETOOTH_LE:   0  # Disable Bluetooth LE
 
-    # Sensor value will be sent as field name `t`
-    SENSOR_KEY:        '"t"'
+    ###########################################################################
+    # Bluetooth Mesh Settings
+    
+    # MSYS_1_BLOCK_COUNT: 48  # Allocate extra MSYS buffers
 
-    # Type of sensor is raw ambient temperature
-    SENSOR_TYPE:       SENSOR_TYPE_AMBIENT_TEMPERATURE_RAW
+    # BLE_MESH_DEV_UUID: "((uint8_t[16]){0xdd, 0xdd, 0})"
+    # BLE_MESH_ADV_BUF_COUNT: 60
+    # BLE_MESH_TX_SEG_MAX: 6
+    # BLE_MESH_TX_SEG_MSG_COUNT: 3
+    # BLE_MESH_RX_SEG_MSG_COUNT: 3
+    # BLE_MESH_CRPL: 128
+    # BLE_MESH_RPL_STORE_TIMEOUT: 120
+    # BLE_MESH_MSG_CACHE_SIZE: 100
 
-    # Raw temperature sensor value is an integer (0 to 4095)
-    SENSOR_VALUE_TYPE: SENSOR_VALUE_TYPE_INT32
+    # BLE_MESH_SETTINGS: 1
+    # CONFIG_FCB: 1
 
-    # Poll the sensor every 10,000 milliseconds (10 seconds)
-    SENSOR_POLL_TIME:  10 * 1000
+    # BLE_MESH: 1
+    # BLE_MESH_RELAY: 1
+    # BLE_MESH_LOW_POWER: 0
+    # BLE_MESH_LPN_AUTO: 0
+    # BLE_MESH_FRIEND: 0
+
+    # BLE_MESH_PROV: 1
+    # BLE_MESH_PB_ADV: 1
+    # BLE_MESH_PB_GATT: 1
+    # BLE_MESH_GATT_PROXY: 1
+
+    # BLE_MESH_SUBNET_COUNT: 2
+    # BLE_MESH_APP_KEY_COUNT: 2
+    # BLE_MESH_MODEL_GROUP_COUNT: 2
+    # BLE_MESH_LABEL_COUNT: 3
+
+    # BLE_MESH_DEBUG: 0
+    # BLE_MESH_DEBUG_NET: 0
+    # BLE_MESH_DEBUG_TRANS: 0
+    # BLE_MESH_DEBUG_BEACON: 0
+    # BLE_MESH_DEBUG_CRYPTO: 0
+    # BLE_MESH_DEBUG_PROV: 0
+    # BLE_MESH_DEBUG_ACCESS: 0
+    # BLE_MESH_DEBUG_MODEL: 0
+    # BLE_MESH_DEBUG_ADV: 0
+    # BLE_MESH_DEBUG_LOW_POWER: 0
+    # BLE_MESH_DEBUG_FRIEND: 0
+    # BLE_MESH_DEBUG_PROXY: 0
+
+    # Not used:
+    # LOG_LEVEL: 1
+    # OS_MAIN_STACK_SIZE: 4096
+    # SHELL_NEWTMGR: 0
+    # FLOAT_USER: 1
+    # HARD_FLOAT: 1
 
     ###########################################################################
     # Network Settings
@@ -123,11 +181,16 @@ syscfg.vals:
 
     ###########################################################################
     # Hardware Settings
-     
-    BC95G:                  1  # Enable Quectel BC95-G NB-IoT driver    
-    TEMP_STM32:             1  # Enable Blue Pill internal temperature sensor
-    ADC_1:                  1  # Enable port ADC1 for internal temperature sensor
-    HMAC_PRNG:              1  # Enable HMAC PRNG pseudorandom number generator
+
+    SPI_0_MASTER:           1  # Enable SPI port 0 for ST7789 display
+    I2C_1:                  1  # Enable I2C port 1 for CST816S touch controller, BMA421 accelerometer, HRS3300 heart rate sensor
+
+    LOW_POWER:              0  # Disable low power support for STM32 Blue Pill
+    GPS_L70R:               0  # Disable driver for Quectel L70R GPS module
+    BC95G:                  0  # Disable driver for Quectel BC95-G NB-IoT module
+    TEMP_STM32:             0  # Disable Blue Pill internal temperature sensor
+    ADC_1:                  0  # Disable port ADC1 for internal temperature sensor
+    HMAC_PRNG:              0  # Disable HMAC PRNG pseudorandom number generator
 
     ###########################################################################
     # OIC Settings for CoAP Transmission
