--- a/hw/bsp/bluepill-64kb/pkg.yml
+++ b/hw/bsp/bluepill-64kb/pkg.yml
@@ -22,8 +22,8 @@
 pkg.name: "hw/bsp/bluepill-64kb"
 pkg.type: bsp
 pkg.description: "BSP Definition for Bluepill stm32f103c8 board (64KB ROM)"
-pkg.author: "Apache Mynewt <dev@mynewt.apache.org>"
-pkg.homepage: "http://mynewt.apache.org/"
+pkg.author:      "Lee Lup Yuen <luppy@appkaki.com>"
+pkg.homepage:    "https://github.com/lupyuen"
 pkg.keywords:
     - stm32
     - stm32f1
