--- a/targets/stm32l4_my_sensor/target.yml
+++ b/targets/stm32l4_my_sensor/target.yml
@@ -1,11 +1,10 @@
-# Application Target Settings
+# Target Settings
 
 # Application that will be targeted
-target.app:           "apps/my_sensor_app"
+target.app:           apps/only_position_app
 
 # Board Support Package (BSP) for the target
 target.bsp:           "hw/bsp/nucleo144-l4r5zi"
-#target.bsp:           "hw/bsp/stm32l4"
 
-# Build with debug support. Or select "optimized" to remove debug support.
+# Build with debug info
 target.build_profile: debug
