--- a/targets/stm32l4_my_sensor/syscfg.yml
+++ b/targets/stm32l4_my_sensor/syscfg.yml
@@ -26,13 +26,14 @@ syscfg.vals:
     # CoAP Server Settings
 
     # CoAP host e.g. 104.199.85.211 (for coap.thethings.io)
-    COAP_HOST:      '"161.35.27.253"'
+    # '"161.35.27.253"'
+    COAP_HOST:      '"46.101.248.55"'
 
     # CoAP UDP port, usually port 5683
     COAP_PORT:      5683
 
     # CoAP URI e.g. v2/things/IVRiBCcR6HPp_CcZIFfOZFxz_izni5xc_KO-kgSA2Y8 (for thethings.io, the last part is the Thing Token)
-    COAP_URI:       '"advanced"'
+    COAP_URI:       '"sgati"'
 
     ###########################################################################
     # Sensor Settings
@@ -57,7 +58,8 @@ syscfg.vals:
 
     NBIOT_BAND:             20  # Connect to this NB-IoT band
     SENSOR_NETWORK:         0  # Enable Sensor Network library
-    SENSOR_COAP:            1  # Send sensor data to CoAP server
+    SENSOR_COAP:            0  # Send sensor data to CoAP server
+    CUSTOM_COAP:            1  # Send position data to CoAP server
     COAP_JSON_ENCODING:     1  # Use JSON to encode CoAP payload for forwarding to thethings.io
     COAP_CBOR_ENCODING:     0
     RAW_TEMP:               1  # Use raw temperature (integer) instead of floating-point temperature values, to reduce ROM size
