added support of time retrieving with bc95g (need to be network connected)

--- a/libs/bc95g/pkg.yml
+++ b/libs/bc95g/pkg.yml
@@ -35,6 +35,7 @@ pkg.deps:
     - "@apache-mynewt-core/libc/baselibc"  #  Baselibc, the tiny version of standard C library. Needs vsscanf.c patch.
     - "libs/buffered_serial"               #  Buffered Serial Port
     - "libs/sensor_network"                #  Sensor Network library
+    - "@apache-mynewt-core/time/datetime"
 
 # Initialisation functions to be called by sysinit() during startup.
 # Mynewt consolidates the initialisation functions into sysinit()
