--- a/apps/my_position_app/syscfg.yml
+++ b/apps/my_position_app/syscfg.yml
@@ -25,22 +25,43 @@ syscfg.defs:
     # List of Settings
     BC95G:
         description: 'Enable NB-IoT access with Quectel BC95-G'
-        value:        0            
+        value:        0        
+    SENSOR_DEVICE:     
+        description: 'Sensor device to be polled e.g. MYNEWT_VAL(TEMP_STM32_DEVICE)'
+        value:       UNDEFINED_SENSOR_DEVICE
+    SENSOR_KEY:
+        description: 'Sensor value to be sent with this field name e.g. "t"'
+        value:       UNDEFINED_SENSOR_KEY
+    SENSOR_TYPE:
+        description: 'Type of sensor e.g. SENSOR_TYPE_AMBIENT_TEMPERATURE_RAW'
+        value:       UNDEFINED_SENSOR_TYPE
+    SENSOR_VALUE_TYPE:
+        description: 'Type of sensor value e.g. SENSOR_VALUE_TYPE_INT32'
+        value:       UNDEFINED_SENSOR_VALUE_TYPE
+    SENSOR_POLL_TIME:
+        description: 'Poll the sensor every N milliseconds e.g. 10 * 1000'
+        value:       UNDEFINED_SENSOR_POLL_TIME   
     REMOTE_SENSOR:
         description: 'Enable driver for Remote Sensor that receives sensor data via nRF24L01 and CoAP'
         value:        0        
     SENSOR_NETWORK:
         description: 'Enable Sensor Network library'
         value:        0
-    SENSOR_COAP:
-        description: 'Send sensor data to CoAP server'
-        value:        0
     CUSTOM_COAP:
         description: 'Send custom data to COAP Server' 
         value:        0  
     HMAC_PRNG:
         description: 'Generate pseuorandom numbers with HMAC. Based on TinyCrypt HMAC PRNG. Requires "temp_stm32" driver for internal temperature sensor as source of entropy.'
-        value:        0      
+        value:        0
+    ADC_1:
+        description: 'Enable port ADC1 for STM32F1xx microcontrollers (blocking reads only, without DMA)'
+        value:        0
+    TEMP_STM32:
+        description: 'Enable STM32 internal temperature sensor based on ADC'
+        value:        0
+    VDD_STM32:
+        description: 'Use internal adc to get vdd voltage' 
+        value:        0           
     RAW_TEMP:
         description: 'Use raw temperature (integer) instead of floating-point temperature values, to reduce ROM size'
         value:        0        
@@ -75,14 +96,28 @@ syscfg.vals:
     COAP_URI:       '"v2/things/IVRiBCcR6HPp_CcZIFfOZFxz_izni5xc_KO-kgSA2Y8"'
 
     ###########################################################################
+    # Sensor device is the STM32 Internal Temperature Sensor
+    SENSOR_DEVICE:     '"temp_stm32_0"' #MYNEWT_VAL(TEMP_STM32_DEVICE)
+
+        # Sensor value will be sent as field name `t`
+    SENSOR_KEY:        '"t"'
+
+    # Type of sensor is raw ambient temperature
+    SENSOR_TYPE:       SENSOR_TYPE_AMBIENT_TEMPERATURE_RAW
+
+    # Raw temperature sensor value is an integer (0 to 4095)
+    SENSOR_VALUE_TYPE: SENSOR_VALUE_TYPE_INT32
+
+    # Poll the sensor every 10,000 milliseconds (10 seconds)
+    SENSOR_POLL_TIME:  10 * 1000
+
+    ###########################################################################
     # GPS Settings
     GPS_DEVICE:         '"gps_neo6m"'
-
     GPS_POLL_TIME:      (10 * 1000)
 
     ###########################################################################
     # Network Settings
-
     SENSOR_NETWORK:         1  # Enable Sensor Network library
     SENSOR_COAP:            0  # Send sensor data to CoAP server
     CUSTOM_COAP:            1
@@ -91,10 +126,13 @@ syscfg.vals:
 
     ###########################################################################
     # Hardware Settings
-     
     BC95G:                  1  # Enable Quectel BC95-G NB-IoT driver
     HMAC_PRNG:              1  # Enable HMAC PRNG pseudorandom number generator
-
+    # ADC / TEMP / VDD
+    ADC_1:                  1  # Enable port ADC1 for internal temperature sensor
+    TEMP_STM32:             1  # Enable Blue Pill internal temperature sensor
+    VDD_STM32:              1
+    
     ###########################################################################
     # OIC Settings for CoAP Transmission
     OC_CLIENT:              1  # Enable the OIC (CoAP) client library
